syntax = "proto3";

package xpilot;

message XplaneData {
	optional int32 audio_com_selection = 1;
	optional bool com1_power = 2;
	optional int32 com1_freq = 3;
	optional int32 com1_stby_freq = 4;
	optional bool com1_audio_selection = 5;
	optional float com1_volume = 6;
	optional bool com2_power = 7;
	optional int32 com2_freq = 8;
	optional int32 com2_stby_freq = 9;
	optional bool com2_audio_selection = 10;
	optional float com2_volume = 11;
	optional bool avionics_power_on = 12;
	optional double latitude = 13;
	optional double longitude = 14;
	optional double altitude = 15;
	optional double pressure_altitude = 16;
	optional double ground_speed = 17;
	optional double pitch = 18;
	optional double roll = 19;
	optional double yaw = 20;
	optional int32 transponder_code = 21;
	optional int32 transponder_mode = 22;
	optional bool transponder_ident = 23;
	optional bool beacon_lights_on = 24;
	optional bool landing_lights_on = 25;
	optional bool nav_lights_on = 26;
	optional bool strobe_lights_on = 27;
	optional bool taxi_lights_on = 28;
	optional double flaps = 29;
	optional bool gear_down = 30;
	optional double speed_brakes = 31;
	optional int32 engine_count = 32;
	optional bool engine1_running = 33;
	optional bool engine2_running = 34;
	optional bool engine3_running = 35;
	optional bool engine4_running = 36;
	optional bool on_ground = 37;
	optional bool replay_mode = 38; 
}